# LSystems

./: .gitignore  CMakeLists.txt  README.md  test_file.ls  test_file_2.ls  test_file_3.ls  test_file_space.ls
docs/: cpp-hmwk.cls  docs.tex  references.bib
graphs/: activity_diagram_get_char.graphml  activity_diagram_replace.graphml  class_cairo_turtle.graphml  class_simple_turtle.graphml  l_system_proposal.graphml  overview.graphml  simple_grammar_data_doubling.graphml
graphs/Examples/: simple_lsystem.graphml
graphs/FileHandler/: activity_diagram_parse_file.graphml  class_diagram_file_handler.graphml
graphs/HelperClasses/: class_diagram_production_rule.graphml
graphs/LSystem/: activity_diagram_clear.graphml  activity_diagram_get_char.graphml  activity_diagram_init.graphml  activity_diagram_replace.graphml  activity_diagram_size.graphml
graphs/LSystemHandler/: activity_diagram_calculate_next_.gengraphml.graphml  activity_diagram_reset.gengraphml.graphml  class_diagram_l_system_handler.graphml
graphs/Parser/: activity_diagram_parse.graphml  class_diagram_parser.graphml
graphs/TurtleGraphic/: class_diagram_turtle_graphic.graphml
modules/: FindCairo.cmake
src/: CairoTurtle.cpp  CairoTurtle.hpp  LSystem.hpp  LSystem2D.cpp  LSystem2D.hpp  Parser.cpp  Parser.hpp  TestTurtle.cpp  TestTurtle.hpp  TurtleGraphic.hpp  bounding-box.hpp  cairo-turtle.cpp  cairo-turtle.hpp  command-mapper.hpp  command-mapping-iterator.hpp  configuration-loader.hpp  configuration.hpp  file-handler.cpp  file-handler.hpp  l-system-2d.cpp  l-system-2d.hpp  l-system-generation.hpp  l-system-handler.cpp  l-system-handler.hpp  l-system.cpp  l-system.hpp  main.cpp  parser.cpp  parser.hpp  production-rule.hpp  production.hpp  state.hpp  test-turtle.cpp  test-turtle.hpp  test.cpp  turtle-graphic.hpp  turtle.hpp
(+8 files in other folders)
